# trident

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md
.github/workflows/: ci.yml
docs/: TELEMETRY.md  TELEMETRY_PLAN.md  TELEMETRY_VERIFICATION.md
examples/: README.md
examples/branching-demo/: agent.tml
examples/branching-demo/prompts/: classify.prompt  respond_negative.prompt  respond_neutral.prompt  respond_positive.prompt
examples/browser-mcp/: agent.tml
examples/browser-mcp/prompts/: browser.prompt
examples/browser-screenshot/: README.md  agent-authenticated.tml  agent.tml
examples/browser-screenshot/prompts/: browser.prompt
examples/dev-team/: agent.tml  trident.yaml
examples/dev-team/prompts/: clarify.prompt  code_review.prompt  design.prompt  extract_context.prompt  implement.prompt  test_runner.prompt  validation_gate.prompt
examples/dev-team/tools/: file_ops.py
examples/hello-world/: agent.tml
examples/hello-world/prompts/: greet.prompt
examples/looping-demo/: agent.tml
examples/looping-demo/workflows/: build.tml
examples/looping-demo/workflows/prompts/: build.prompt
examples/structured-output/: README.md  agent.tml
examples/structured-output/prompts/: analyze.prompt
examples/support-triage/: agent.tml  trident.yaml
examples/support-triage/prompts/: classify.prompt  respond.prompt
examples/text-refinement-loop/: README.md  agent.tml
examples/text-refinement-loop/workflows/: quality-loop.tml
examples/text-refinement-loop/workflows/prompts/: process.prompt
examples/todomvc-python/: agent.tml  tools  trident.yaml
examples/todomvc-python/prompts/: design.prompt  implement.prompt
examples/todomvc-vue/: agent.tml  trident.yaml
examples/todomvc-vue/prompts/: design.prompt  implement.prompt
examples/todomvc-vue/tools/: file_ops.py
examples/tools-demo/: agent.tml
examples/tools-demo/prompts/: summarize.prompt
examples/tools-demo/tools/: weather.py
examples/workflows-demo/: agent.tml
monitor/: nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
monitor/app/components/: AppHeader.vue  AppSidebar.vue  ConnectionBanner.vue  DetailPanel.vue  NewRunDialog.vue  NodeDetail.vue  RunListItem.vue  ToastContainer.vue
monitor/app/composables/: useProjectPath.ts  useWebSocket.ts
monitor/app/layouts/: default.vue
monitor/app/pages/: index.vue
monitor/app/plugins/: websocket.client.ts
monitor/app/stores/: projects.ts  runs.ts  ui.ts
monitor/server/routes/: ws.ts
runtime/: pyproject.toml
runtime/examples/self-docs/: agent.tml  run_docs.py
runtime/examples/self-docs/.trident/checkpoints/: c87d6f62-30b7-468a-ba8b-0a9489b8a839.json
runtime/examples/self-docs/output/: API_REFERENCE.md  execution_trace.json
runtime/examples/self-docs/prompts/: analyzer.prompt  api_reference.prompt  architecture.prompt  getting_started.prompt  reviewer.prompt
runtime/tests/: __init__.py  conftest.py  test_agent_integration.py  test_agents.py  test_artifacts.py  test_branch.py  test_conditions.py  test_dag.py  test_executor.py  test_parser.py  test_project.py  test_providers.py  test_telemetry.py  test_telemetry_integration.py  test_tools.py
runtime/tests/test_agent_providers/: __init__.py  test_base.py  test_claude.py  test_gemini.py  test_openai.py  test_registry.py
runtime/trident/: __init__.py  __main__.py  agents.py  artifacts.py  cli_agents.py  conditions.py  dag.py  errors.py  executor.py  orchestration.py  parser.py  project.py  telemetry.py  template.py
runtime/trident/agent_providers/: __init__.py  base.py  claude.py  gemini.py  openai.py
runtime/trident/providers/: __init__.py  anthropic.py  base.py
runtime/trident/tools/: python.py
tests/: __init__.py  test_conditions.py  test_dag.py  test_parser.py  test_project.py  test_template.py
trident/: __init__.py  __main__.py  conditions.py  dag.py  errors.py  executor.py  parser.py  project.py  template.py
trident/providers/: __init__.py  anthropic.py  base.py  openai.py
trident/tools/: __init__.py  python.py
(+21 files in other folders)
